blocchi section about-us completa

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,9 @@ main{
         padding: 1rem;
     }
 
-    #benefits{
+    /* FINE DEBUG RULES */
+
+    #benefits{ 
         background-color: var(--secondary-color);
         padding: 4rem 0;
     }
@@ -89,7 +91,15 @@ main{
         margin-top: 1 rem;
         margin-bottom: 1rem;
     }
-    
+
+    #about-us{
+        padding: 4rem 0;
+    }
+
+    #about-us .column{
+        margin-top: 1rem;
+    }
+
 
     /* RESPONSIVE RULES */
 
@@ -137,7 +147,15 @@ main{
             flex-wrap: wrap;
         }
 
-        
+        #about-us .columns{
+            display: flex;
+        }
+
+        #about-us .column{
+            margin: 1rem;
+            width: calc((100% / 2) - 2rem );
+        }
+
     }
 
     /* PC SIZE */
