--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,17 @@ header.size-header {
     left: 0;
     top: 0;
     width: 100%;
+    height: 80px;
     }
    
+    .size-header.container{
+        height: 100%;
+    }
 
 .container{
     max-width: 600px;
     margin: auto;
-
+    padding: 0 1rem;
 }
 
 .flex{
@@ -69,9 +73,9 @@ main{
 
     /* DEBUG RULES */
 
+
     .debug-box{
         height: 80px;
-        background-color: var(--primary-light-color);
         padding: 1rem;
     }
 
@@ -137,6 +141,14 @@ main{
     padding: 10px;
     width: 70%;
     margin: auto;
+  }
+
+  .main-menu{
+    display: none;
+  }
+
+  .hamburger{
+    color: white;
   }
 
 
@@ -231,6 +243,31 @@ main{
             margin-right: 1rem;
             width: calc((100% / 3) - 2rem);
         }
+
+         .main-menu a{
+            text-decoration: none;
+            color: white; 
+         }
+
+         .main-menu{
+            display: block;
+         }
+
+         ul {
+            list-style: none;
+            display: flex;
+            padding-left: 1rem;
+         }
+
+         ul > li{
+            padding-left: 1rem;
+            padding-top: 20px;
+         }
+
+         .hamburger{
+            display: none;
+         }
+
 
     }
 
